Chore: Enhance validation and improve code consistency across multiple `option` classes in `xmldoclet`